...
    android:layout_height="match_parent"
    android:background="@color/adPostGreyBackground"
    tools:context=".presentation.postingadactivity.ViewAdOfCurrentUser">


    <TextView
        android:id="@+id/textView_viewAdCU_title"
        android:layout_width="510dp"
        android:layout_height="43dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView_viewAdCU_price"
        android:layout_width="510dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_title"
        app:layout_constraintVertical_bias="0.014" />


    <TextView
        android:id="@+id/textView_viewAdCU_description"
        android:layout_width="515dp"
        android:layout_height="400dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="124dp"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_price"
        app:layout_constraintVertical_bias="0.094" />


    <Button
        android:id="@+id/button_viewAdCU_edit"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="44dp"
        android:layout_marginBottom="8dp"
        android:background="@android:drawable/editbox_background"
...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_description"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/button_viewAdCU_delete"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        app:layout_constraintHorizontal_bias="0.098"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_viewAdCU_description"
        app:layout_constraintVertical_bias="0.604" />

    <Button
        android:id="@+id/button_viewAdCU_repost"
        android:layout_width="120dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
