...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorPrimaryDark">

        <include
            android:id="@+id/imageButton_mainActivity_accountButton"
            layout="@layout/activity_user_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp" />

        <TextView
...
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="18sp"
                android:textStyle="bold" />

        <Button
            android:id="@+id/button_mainActivity_postAnAd"
            android:layout_width="289dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="50dp"
            android:background="@android:drawable/editbox_background"
...


    </LinearLayout>


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_mainActivity"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        />
</LinearLayout>

